# url-shortener

./: .env.example  .gitignore  CLAUDE.md  README.md  cdk.json  pyproject.toml  url_shortener_PRD.md
backend/lambdas/create_url/: handler.py
backend/lambdas/redirect_url/: handler.py
backend/shared/: hashing.py
explanations/: layer1_hashing.md  layer2_create_url.md  layer3_redirect_url.md  layer4_cdk_infrastructure.md  layer5_react_frontend.md  layer6_readme_and_config.md
frontend/: .env.example  package-lock.json  package.json
frontend/public/: config.json
frontend/src/: App.jsx
frontend/src/components/: CacheChart.jsx  LoadSimulator.jsx  RequestFlow.jsx  UrlForm.jsx
infrastructure/: app.py
infrastructure/stacks/: url_shortener_stack.py
tests/: test_create_url.py  test_hashing.py  test_redirect_url.py
