[project]
name = "url-shortener"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aws-cdk-lib>=2.258.0",
    "boto3>=1.43.24",
    "constructs>=10.6.0",
    "pybase62>=1.0.0",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "redis>=8.0.0",
]
